<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JumatDetailActivity">

    <TextView
        android:id="@+id/tv_title_detail_jumat"
        style="@style/StyleText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_home_toolbar"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/detail_jumat"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/khotib"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/khatib_imam"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_jumat" />

    <TextView
        android:id="@+id/tv_detail_jumatan_khotib"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/khatib_imam"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_jumatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_jumat" />

    <TextView
        android:id="@+id/muadzin"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/muadzin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_khotib" />

    <TextView
        android:id="@+id/tv_detail_jumatan_muadzin"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/muadzin"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_jumatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_khotib" />

    <TextView
        android:id="@+id/tanggal"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tgl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_muadzin" />

    <TextView
        android:id="@+id/tv_detail_jumatan_tanggal"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tgl"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_jumatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_muadzin" />

    <TextView
        android:id="@+id/jam"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/jm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_tanggal" />

    <TextView
        android:id="@+id/tv_detail_jumatan_jam"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/jm"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_jumatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_tanggal" />

    <TextView
        android:id="@+id/isi"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/isi_khutbah_jumat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_jam" />

    <TextView
        android:id="@+id/tv_detail_jumatan_isi"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/isi_khutbah_jumat"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_jumatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_jumatan_jam" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_jumatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="140dp" />

</androidx.constraintlayout.widget.ConstraintLayout>