<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PengajianDetailActivity">

    <TextView
        android:id="@+id/tv_title_detail"
        style="@style/StyleText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_home_toolbar"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/detail_pengajian"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tema"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/tema_pengajian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/tv_detail_pengajian_tema"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/tema_pengajian"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengajian"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

    <TextView
        android:id="@+id/judul"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/judul_pengajian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_tema" />

    <TextView
        android:id="@+id/tv_detail_pengajian_judul"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/judul_pengajian"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengajian"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_tema" />

    <TextView
        android:id="@+id/tanggal"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tgl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_judul" />

    <TextView
        android:id="@+id/tv_detail_pengajian_tanggal"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tgl"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengajian"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_judul" />

    <TextView
        android:id="@+id/jam"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/jm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_tanggal" />

    <TextView
        android:id="@+id/tv_detail_pengajian_jam"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/jm"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengajian"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_tanggal" />

    <TextView
        android:id="@+id/isi"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/isi_pengajian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_jam" />

    <TextView
        android:id="@+id/tv_detail_pengajian_isi"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/isi_pengajian"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengajian"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengajian_jam" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_pengajian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="140dp" />

</androidx.constraintlayout.widget.ConstraintLayout>