<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.PengurusDetailActivity">

    <TextView
        android:id="@+id/tv_title_detail_pengurus"
        style="@style/StyleText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bg_home_toolbar"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:text="@string/detail_pengurus"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/nama"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama_pengurus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_pengurus" />

    <TextView
        android:id="@+id/tv_detail_pengurus_nama"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/nama_pengurus"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengurus"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_pengurus" />


    <TextView
        android:id="@+id/jabatan"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/jabatan_pengurus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengurus_nama" />

    <TextView
        android:id="@+id/tv_detail_pengurus_jabatan"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/jabatan_pengurus"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengurus"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengurus_nama" />

    <TextView
        android:id="@+id/umur"
        style="@style/StylePrimaryTextDark"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/umur_pengurus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengurus_jabatan" />

    <TextView
        android:id="@+id/tv_detail_pengurus_umur"
        style="@style/StylePrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/umur_pengurus"
        app:layout_constraintStart_toStartOf="@+id/guideline_detail_pengurus"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_pengurus_jabatan" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_pengurus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="140dp" />

</androidx.constraintlayout.widget.ConstraintLayout>