<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".admin.DataPengurusFragment">

    <ProgressBar
        android:id="@+id/pg_pengurus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_pengurus"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:scaleType="centerInside"
        android:src="@drawable/dkm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/textLayout"
        android:theme="@style/EditScreenTextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_pengurus">

        <EditText
            android:id="@+id/et_pengurus_nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/nama_pengurus"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/nama_pengurus"
            android:maxLines="1"
            android:textColor="#070707"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/textLayout"
        android:theme="@style/EditScreenTextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <EditText
            android:id="@+id/et_pengurus_jabatan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/muadzin"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/jabatan_pengurus"
            android:maxLines="1"
            android:textColor="#070707"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/textLayout"
        android:theme="@style/EditScreenTextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/ll_tambah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

        <EditText
            android:id="@+id/et_pengurus_umur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/umur_pengurus"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/umur_pengurus"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#070707" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_tambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

        <Button
            android:id="@+id/btn_pengurus_tambah"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:text="@string/tambah_data"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout_test"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_tambah" />

</androidx.constraintlayout.widget.ConstraintLayout>
