<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".admin.DataNotifikasiFragment">

    <ProgressBar
        android:id="@+id/pg_notifikasi"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/textLayout"
        android:theme="@style/EditScreenTextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_notifikasi_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/title"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/title"
            android:maxLines="1"
            android:textColor="#070707"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textColorHint="@color/textLayout"
        android:theme="@style/EditScreenTextInputLayoutStyle"
        app:layout_constraintBottom_toTopOf="@+id/ll_tambah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

        <EditText
            android:id="@+id/et_notifikasi_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/deskripsi"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/deskripsi"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#070707" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_tambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

        <Button
            android:id="@+id/btn_notifikasi_tambah"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/roboto"
            android:text="@string/kirim"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
